force-app/main/default/objects/Quote__c/Quote__c.object-meta.xml
<CustomObject>
    <label>Quote</label>
    <nameField>
        <displayFormat>QT-{00000}</displayFormat>
        <label>Quote No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>