force-app/main/default/objects/Quote__c/fields/AddressEN__c.field-meta.xml
<CustomField>
    <fullName>AddressEN__c</fullName>
    <label>Address EN</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>