force-app/main/default/objects/Quote__c/fields/AddressTH__c.field-meta.xml
<CustomField>
    <fullName>AddressTH__c</fullName>
    <label>Address TH</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>