force-app/main/default/objects/Quote__c/fields/ApproveStatus__c.field-meta.xml
<CustomField>
    <fullName>ApproveStatus__c</fullName>
    <label>Approve Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>