force-app/main/default/objects/Quote__c/fields/ContractAmount__c.field-meta.xml
<CustomField>
    <fullName>ContractAmount__c</fullName>
    <formula>UnitPrice__c *   BLANKVALUE(ContractPercent__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>