force-app/main/default/objects/Quote__c/fields/ContractPercent__c.field-meta.xml
<CustomField>
    <fullName>ContractPercent__c</fullName>
    <formula>BLANKVALUE( PaymentTerm__r.ContractPercent__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>