force-app/main/default/objects/Quote__c/fields/DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>DiscountAmount__c</fullName>
    <label>Discount Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>