force-app/main/default/objects/Quote__c/fields/DiscountPercentOfAmount__c.field-meta.xml
<CustomField>
    <fullName>DiscountPercentOfAmount__c</fullName>
    <label>Discount Percent Of Amount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>