force-app/main/default/objects/Quote__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <formula>TEXT(PaymentTerm__r.DueDate__c) &amp; 
CASE(
  MOD(PaymentTerm__r.DueDate__c, 10),
  1, IF(PaymentTerm__r.DueDate__c = 11, &quot;th&quot;, &quot;st&quot;),
  2, IF(PaymentTerm__r.DueDate__c = 12, &quot;th&quot;, &quot;nd&quot;),
  3, IF(PaymentTerm__r.DueDate__c = 13, &quot;th&quot;, &quot;rd&quot;),
  &quot;th&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date</label>
    <type>Text</type>
</CustomField>