force-app/main/default/objects/Quote__c/fields/FirstInstallmentDate__c.field-meta.xml
<CustomField>
    <fullName>FirstInstallmentDate__c</fullName>
    <label>First Installment Date</label>
    <type>Date</type>
</CustomField>