force-app/main/default/objects/Quote__c/fields/InstallmentPercent__c.field-meta.xml
<CustomField>
    <fullName>InstallmentPercent__c</fullName>
    <formula>BLANKVALUE(PaymentTerm__r.InstallmentPercent__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installment Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>