force-app/main/default/objects/Quote__c/fields/InstallmentPerMonth__c.field-meta.xml
<CustomField>
    <fullName>InstallmentPerMonth__c</fullName>
    <formula>CEILING(BLANKVALUE(TotalInstallmentAmount__c, 0)  / BLANKVALUE(NoofInstallment__c,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installment Per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>