force-app/main/default/objects/Quote__c/fields/IsCanChangeSyncQuote__c.field-meta.xml
<CustomField>
    <fullName>IsCanChangeSyncQuote__c</fullName>
    <formula>OR(
   ISPICKVAL( Opportunity__r.StageName, &quot;Open&quot;), 
   ISPICKVAL(Opportunity__r.StageName , &quot;Quotation&quot;),
   ISPICKVAL(Opportunity__r.StageName, &quot;Negotiation&quot;)
 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsCanChangeSyncQuote</label>
    <type>Checkbox</type>
</CustomField>