force-app/main/default/objects/Quote__c/fields/IsSyncing__c.field-meta.xml
<CustomField>
    <fullName>IsSyncing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSyncing</label>
    <type>Checkbox</type>
</CustomField>