force-app/main/default/objects/Quote__c/fields/NetPricePerSqm__c.field-meta.xml
<CustomField>
    <fullName>NetPricePerSqm__c</fullName>
    <label>Net Price/Sq.m</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>