force-app/main/default/objects/Quote__c/fields/NoofInstallment__c.field-meta.xml
<CustomField>
    <fullName>NoofInstallment__c</fullName>
    <formula>PaymentTerm__r.NoofInstallment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of Installment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>