force-app/main/default/objects/Quote__c/fields/OpportunityPayment__c.field-meta.xml
<CustomField>
    <fullName>OpportunityPayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Payment</label>
    <referenceTo>OpportunityPayment__c</referenceTo>
    <relationshipLabel>Quote</relationshipLabel>
    <relationshipName>Quote</relationshipName>
    <type>Lookup</type>
</CustomField>