force-app/main/default/objects/Quote__c/fields/PaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Term</label>
    <referenceTo>PaymentTermMaster__c</referenceTo>
    <relationshipLabel>Quote</relationshipLabel>
    <relationshipName>Quote</relationshipName>
    <type>Lookup</type>
</CustomField>