force-app/main/default/objects/Quote__c/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <formula>Text(PaymentTerm__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Type</label>
    <type>Text</type>
</CustomField>