force-app/main/default/objects/Quote__c/fields/ProjectName__c.field-meta.xml
<CustomField>
    <fullName>ProjectName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Name</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Quote</relationshipLabel>
    <relationshipName>Quote</relationshipName>
    <type>Lookup</type>
</CustomField>