force-app/main/default/objects/Quote__c/fields/ProjectUnitQuote__c.field-meta.xml
<CustomField>
    <fullName>ProjectUnitQuote__c</fullName>
    <formula>ProjectName__r.Name &amp; &quot; &quot; &amp; &quot;:&quot; &amp; &quot; &quot;&amp;  UnitNo__r.Name</formula>
    <label>ProjectUnitQuote</label>
    <type>Text</type>
</CustomField>