force-app/main/default/objects/Quote__c/fields/QuotationDocId__c.field-meta.xml
<CustomField>
    <fullName>QuotationDocId__c</fullName>
    <label>Quotation Doc Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>