force-app/main/default/objects/Quote__c/fields/QuoteName__c.field-meta.xml
<CustomField>
    <fullName>QuoteName__c</fullName>
    <formula>LEFT(  ProjectName__r.ProjectAbbreviated__c  +&quot; - &quot; +  UnitNo__r.Name + &quot; - &quot; +  Opportunity__r.Account.Name , 255)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Name</label>
    <type>Text</type>
</CustomField>