force-app/main/default/objects/Quote__c/fields/ReservationAmount__c.field-meta.xml
<CustomField>
    <fullName>ReservationAmount__c</fullName>
    <formula>BLANKVALUE(UnitNo__r.ReservationPrice__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reservation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>