force-app/main/default/objects/Quote__c/fields/TotalDiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>TotalDiscountPercent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Discount Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>