force-app/main/default/objects/Quote__c/fields/TotalInstallmentAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalInstallmentAmount__c</fullName>
    <formula>BLANKVALUE(PaymentTerm__r.NoofInstallment__c, 0) * 
(
	CEILING(
		(
			UnitPrice__c * 
			ROUND(
				(BLANKVALUE(PaymentTerm__r.InstallmentPercent__c, 0) * 100) / BLANKVALUE(NoofInstallment__c, 0),
				2
			)
		) / 100
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Installment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>