force-app/main/default/objects/Quote__c/fields/TransferAmount__c.field-meta.xml
<CustomField>
    <fullName>TransferAmount__c</fullName>
    <formula>UnitPrice__c-  TotalDiscountAmount__c -  ReservationAmount__c - ContractAmount__c - TotalInstallmentAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transfer Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>