force-app/main/default/objects/Quote__c/fields/TransferPercent__c.field-meta.xml
<CustomField>
    <fullName>TransferPercent__c</fullName>
    <formula>BLANKVALUE(  PaymentTerm__r.TransferPercent__c  , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transfer Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>