force-app/main/default/objects/Quote__c/fields/UnitNo__c.field-meta.xml
<CustomField>
    <fullName>UnitNo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit No.</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quote</relationshipLabel>
    <relationshipName>Quote</relationshipName>
    <type>Lookup</type>
</CustomField>