force-app/main/default/objects/Quote__c/fields/UnitPricePersqm__c.field-meta.xml
<CustomField>
    <fullName>UnitPricePersqm__c</fullName>
    <label>Unit Price/sq.m.</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>