force-app/main/default/objects/Quote__c/validationRules/CheckAcceptednotApproved.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckAcceptednotApproved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
AND(
ISPICKVAL(  Status__c  , &quot;Accepted&quot; )
),
 ApproveStatus__c != &quot;Approved&quot;

)</errorConditionFormula>
    <errorMessage>Before changing the stage to &quot;Accepted&quot;, please enter submit to approve first.</errorMessage>
</ValidationRule>