force-app/main/default/objects/Quote__c/validationRules/CheckChangeApprovedtoPendingApproval.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckChangeApprovedtoPendingApproval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
AND(
ISCHANGED( Status__c ),
ISPICKVAL( Status__c , &quot;Pending Approval&quot; )
),
 ApproveStatus__c  = &quot;Approved&quot;

)</errorConditionFormula>
    <errorMessage>The status &quot;Approved&quot; cannot be changed.</errorMessage>
</ValidationRule>