force-app/main/default/objects/Quote__c/validationRules/CheckChangeApprovetoOpen.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckChangeApprovetoOpen</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
AND(
ISCHANGED( Status__c ),
ISPICKVAL( Status__c , &quot;Open&quot; )
),
 ApproveStatus__c  = &quot;Approved&quot;

)</errorConditionFormula>
    <errorMessage>Cannot change status to &quot;Open&quot; after already approved</errorMessage>
</ValidationRule>