force-app/main/default/objects/Quote__c/validationRules/CheckChangeOpentoPendingApproval.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckChangeOpentoPendingApproval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
AND(
ISCHANGED( Status__c ),
ISPICKVAL( Status__c , &quot;Pending Approval&quot; )
),
 ApproveStatus__c  != &quot;Pending Approval&quot;

)</errorConditionFormula>
    <errorMessage>Please click the &quot;Submit for Approval&quot; button.</errorMessage>
</ValidationRule>