force-app/main/default/objects/Quote__c/validationRules/DoNotChangeStageWhenAccepted.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotChangeStageWhenAccepted</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
    ISPICKVAL(PRIORVALUE( Status__c ), &quot;Accepted&quot;),
     ISCHANGED( Status__c ) 

)</errorConditionFormula>
    <errorMessage>Cannot edit all information when the quote is Accepted</errorMessage>
</ValidationRule>