force-app/main/default/objects/Quote__c/validationRules/DoNotEditDiscountWhenApproved.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotEditDiscountWhenApproved</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
    ISPICKVAL( Status__c , &quot;Approved&quot;),
     ApproveStatus__c = &quot;Approved&quot;,
    OR
    (

      ISCHANGED(  DiscountPercent__c  ),
      ISCHANGED(   DiscountAmount__c  ),
      ISCHANGED(  Opportunity__c )
      )

)</errorConditionFormula>
    <errorMessage>Cannot edit all information when the quote is Approved.</errorMessage>
</ValidationRule>