force-app/main/default/objects/Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>QuoteName__c</columns>
    <columns>Opportunity__c</columns>
    <columns>AccountName__c</columns>
    <columns>IsSyncing__c</columns>
    <columns>ProjectName__c</columns>
    <columns>UnitNo__c</columns>
    <columns>Status__c</columns>
    <columns>TotalPrice__c</columns>
    <columns>ApproveStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>